sf-hrms/force-app/main/default/objects/Shift_Assignment__c/Shift_Assignment__c.object-meta.xml
<CustomObject>
    <label>Shift Assignment</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>