sf-hrms/force-app/main/default/objects/Shift_Assignment__c/fields/Effective_From__c.field-meta.xml
<CustomField><fullName>Effective_From__c</fullName><label>Effective From</label><type>Date</type></CustomField>