sf-hrms/force-app/main/default/objects/Shift_Assignment__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Shift Assignments</relationshipLabel><relationshipName>Shift_Assignments</relationshipName></CustomField>