sf-hrms/force-app/main/default/objects/Shift_Assignment__c/fields/Is_Current__c.field-meta.xml
<CustomField><fullName>Is_Current__c</fullName><label>Is Current</label><type>Checkbox</type><defaultValue>true</defaultValue></CustomField>