sf-hrms/force-app/main/default/objects/Shift_Assignment__c/fields/Shift__c.field-meta.xml
<CustomField><fullName>Shift__c</fullName><label>Shift</label><type>Lookup</type><referenceTo>Shift__c</referenceTo><relationshipLabel>Assignments</relationshipLabel><relationshipName>Assignments</relationshipName></CustomField>