sf-hrms/force-app/main/default/objects/Shift_Assignment__c/validationRules/Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), Effective_From__c &gt; Effective_To__c)</errorConditionFormula>
    <errorMessage>Effective From cannot be after Effective To.</errorMessage>
</ValidationRule>